frontend/test/should_fail/index_mm_min_node.grg
#using "index_min_max_size_model.gm"

rule r {
	n:N -e:E->;
	if { minNodeFromIndex(n) in nodesFromIndex(fooi); }
	
	modify {
	}
}
